--- a/tools/tsconfig/tsconfig.json
+++ b/tools/tsconfig/tsconfig.json
@@ -7,8 +7,8 @@
     "inlineSources": true,
     "isolatedModules": true,
     "lib": ["ESNext"],
-    "module": "CommonJS",
-    "moduleResolution": "node",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "noEmitOnError": true,
     "outDir": "./dist",
     "resolveJsonModule": true,
